# aoe2scraper

./: .gitignore  README.md  __init__.py  aoe2api.py  fetch_replay.py  pyproject.toml  replay_scraper.py
aoe2api/: __init__.py  aoe2api.py
lobby/: __init__.py  lobby.py  match_book.py  utils.py
lobby/datasets/: 100.json
scraper/: __init__.py  replay_scraper.py
shared/: __init__.py
spies/: __init__.py  audio.py  avatar.py  cli.py  logging_utils.py  player_test.py  spies.py  toast_handlers.py  toast_queue.py  watchlist.py
