[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agekeeper"
version = "0.1.0"
description = "Core AgeKeeper modules (lobby, aoe2api, shared)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lobby*", "shared*", "aoe2api*"]
exclude = ["spies*"]
